--- a/Front End/Exercicio_aula_02/style.css
+++ b/Front End/Exercicio_aula_02/style.css
@@ -1,89 +1,151 @@
-body{
-    background: rgb(218,214,220);
-    background: linear-gradient(90deg, rgba(218,214,220,1) 0%, rgba(223,219,223,1) 100%);
+body {
+    background: rgb(218, 214, 220);
+    background: linear-gradient(90deg, rgb(202, 250, 250) 0%, rgb(48, 215, 215) 100%);
 }
 
-h1{
-    color:black;
-    font-size: 35px;
-}
-
-.descricao{
+h1 {
+    font-family: 'Times New Roman', Times, serif;
     color: black;
-    font-size: 15px;
-    width: 100%;
-    text-align: left;
+    font-size: 35px;
+    margin: 1rem;
 }
 
-.tabela{
-    color:black;
-    font-size: 20px; 
-    width: 100%;
-    text-align: center;
-}
-
-.lista{
-    color:black;
-    font-size: 20px; 
-    width: 100%;
-    text-align: center;
-}
-
-.contato{
-    color:black;
-    font-size: 20px; 
-    width: 100%;
-    text-align: center;
-}
-
-tr{
-    color:rgb(104,100,100);
-    font-size: 17px;
-    width: 100%;
-    text-align: center;
-}
-th{
-    color:black;
-    font-size: 17px;
-    font-style: italic;
-}
-td{
-    color:rgb(104,100,100);
-    font-size: 17px;
-    font-style: italic;
-}
-
-footer{
-    color:rgb(93, 87, 87);
-    font-size: 15px; 
-    font-style: italic;
-    width: 100%;
-    text-align:left;
-}
-ul{
-    color:rgb(93, 87, 87);
-    font-size: 15px; 
-    font-style: italic;
-    width: 100%;
-    text-align: left;
-}
-
-table{
-    width: 100%;
-    text-align: center;
-}
-
-.container{
-    border:2px solid white;
-    border-radius: 1rem;
-    margin: 4rem;
-    padding: 1rem;
-    background-color: rgba(255, 255, 255, 0.174);
-}
-img{
+img {
     border: 2px solid grey;
     border-radius: 1rem;
     margin-left: 50rem;
     position: relative;
+    margin-top: -75px;
+}
 
+.descricao {
+    font-family: 'Times New Roman', Times, serif;
+    color: black;
+    font-size: 20px;
+    width: 100%;
+    text-align: left;
+    margin-top: -50px;
+}
+
+.tabela {
+    font-family: 'Times New Roman', Times, serif;
+    color: black;
+    font-size: 20px;
+    width: 100%;
+    text-align: center;
+}
+
+.lista {
+    color: black;
+    font-size: 20px;
+    width: 100%;
+    text-align: center;
+}
+
+.contato {
+    color: black;
+    font-size: 20px;
+    width: 100%;
+    text-align: center;
+}
+
+tr {
+    color: rgb(104, 100, 100);
+    font-size: 17px;
+    width: 100%;
+    text-align: center;
+}
+
+th {
+    color: black;
+    font-size: 17px;
+    font-style: italic;
+}
+
+td {
+    color: rgb(104, 100, 100);
+    font-size: 17px;
+    font-style: italic;
+}
+
+footer {
+    color: rgb(93, 87, 87);
+    font-size: 15px;
+    font-style: italic;
+    width: 100%;
+    text-align: left;
+}
+
+ul {
+    color: rgb(93, 87, 87);
+    font-size: 15px;
+    font-style: italic;
+    width: 100%;
+    text-align: left;
+}
+
+table {
+    width: 100%;
+    text-align: center;
+}
+
+.container {
+    display: grid;
+    border: 2px solid white;
+    border-radius: 1rem;
+    margin: 4rem;
+    padding: 1rem;
+    background-color: rgba(255, 255, 255, 0.174);
+    justify-content: center;
+}
+
+@media screen and (max-width: 480px) {
+    body {
+        background: rgb(218, 214, 220);
+        background: linear-gradient(90deg, rgb(202, 250, 250) 0%, rgb(48, 215, 215) 100%);
+    }
+
+}
+
+.container {
+    display: grid;
+    border: 2px solid white;
+    border-radius: 1rem;
+    margin: 1rem;
+    padding: 1rem;
+    background-color: rgba(255, 255, 255, 0.174);
+    justify-content: center;
+}
+
+h1 {
+    font-family: 'Times New Roman', Times, serif;
+    color: black;
+    font-size: 35px;
+    margin: 15rem;
+    margin-top: 0.5rem;
+    display: flex;
+    text-align: center;
+}
+
+img {
+    border: 2px solid grey;
+    border-radius: 1rem;
+    margin-left: 50rem;
+    position: relative;
+    margin: 20rem;
+    margin-block-start: -13rem;
+}
+
+.descricao {
+    font-family: 'Times New Roman', Times, serif;
+    color: black;
+    font-size: 15px;
+    width: 100%;
+    text-align: center;
+    justify-content: flex-start;
+    display: flex;
+    margin-top: -290px;
+    margin-left: 16rem;
+    margin-right: 20rem;
+    position:absolute;
 }
